--- a/src/css/style.css
+++ b/src/css/style.css
@@ -261,7 +261,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
     
     .bgimg-1 {
       background-image: url('/img/downtown-toronto.jpg');
-      min-height: 100%;
+      min-height: 400px ;
     }
     /* Second image (Portfolio) */
     
@@ -339,3 +339,43 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 @media all and (max-width: 500px) {
 .vid-info .acronym { display: none; }
 }
+
+.taglist {
+  display:flex;
+  list-style:none;
+}
+
+.taglist li {
+  padding:5px;
+}
+
+.taglist  {
+ margin-left: 0;
+ padding-left: 0;
+ display: inline;
+ } 
+
+.taglist  li {
+  margin: 2px;
+
+  list-style: none;
+  display: inline-block;
+
+  font-style: normal;
+  color: rgba(0,0,0,.44);
+  font-size: 13px;
+  letter-spacing: 0;
+  text-decoration: none;
+  background: #fafafa;
+  border-radius: 3px;
+  border: 1px solid #f0f0f0;
+  padding: 5px 10px;
+ }
+ 
+  
+#pipe ul li.first {
+ margin-left: 0;
+ border-left: none;
+ list-style: none;
+ display: inline;
+ }
