--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -4,17 +4,29 @@
     <a href="https://github.com/tforster" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
     <a href="https://twitter.com/tforster" target="_blank"><i class="fa fa-twitter w3-hover-opacity"></i></a>
     <a href="https://www.instagram.com/tforster" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
-    <a href="https://plus.google.com/u/0/+TroyForster" target="_blank"><i class="fa fa-google w3-hover-opacity"></i></a>    
+    <a href="https://plus.google.com/u/0/+TroyForster" target="_blank"><i class="fa fa-gplus w3-hover-opacity"></i></a>    
     <a href="https://www.linkedin.com/in/tforster" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>    
     <a href="https://medium.com/@tforster" target="_blank"><i class="fa fa-medium w3-hover-opacity"></i></a>    
-    <a href="https://www.facebook.com/troy.forster" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+    <a href="https://dockerhub" target="_blank"><i class="fa fa-docker w3-hover-opacity"></i></a>    
+    <a href="https://www.facebook.com/troy.forster" target="_blank"><i class="fa fa-facebook w3-hover-opacity"></i></a>
     <a href="mailto:troy.forster@gmail.com" target="_blank"><i class="fa fa-envelope w3-hover-opacity"></i></a>    
     <a href="tel:+14166174921" target="_blank"><i class="fa fa-phone w3-hover-opacity"></i></a>    
     <a href="http://www.imdb.com/name/nm0286997/?ref_=nv_sr_1" target="_blank"><i class="fa fa-imdb w3-hover-opacity"></i></a>    
-  </div>
+  </div><div>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+
 </footer>
-<!-- build:js lib.js -->
-<script src="js/marked.min.js"></script> <!-- Copied from node_modules/marked. -->
-<script src="js/contentful.js"></script> <!-- Copied from node_modules/contentful. -->
-<script src="js/main.js"></script>
+<!-- build:js /lib.js -->
+<!--<script src="/js/marked.min.js"></script>--> <!-- Copied from node_modules/marked. -->
+<!--<script src="/js/contentful.js"></script>--> <!-- Copied from node_modules/contentful. -->
+<script src="/js/app.js"></script>
 <!-- endbuild -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-5539980-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
