--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -16,8 +16,7 @@
 
 </footer>
 <!-- build:js /lib.js -->
-<!--<script src="/js/marked.min.js"></script>--> <!-- Copied from node_modules/marked. -->
-<!--<script src="/js/contentful.js"></script>--> <!-- Copied from node_modules/contentful. -->
+<script src="/js/marked.min.js"></script>
 <script src="/js/app.js"></script>
 <!-- endbuild -->
 <script>
