--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -7,6 +7,7 @@
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
 <!-- build:css /stylesheet.css -->
+<link rel="stylesheet" href="/css/w3.css" />
 <link rel="stylesheet" href="/css/style.css" />
 <link rel="stylesheet" href="/css/icons.css"/>
 <!-- endbuild -->
