--- a/src/views/portfolio-product.html
+++ b/src/views/portfolio-product.html
@@ -17,16 +17,48 @@
     <% include partials/footer.ejs %>
 
       <template id="productTemplate">
-        <h3 class="w3-center">{{$title}}</h3>
-        <p class="w3-center"><em>{{$teaser}}</em></p>
-        <div class="w3-row">
-          <div class="w3-col m6 w3-center w3-padding-large">
-            <img src="{{$thumbnailUrl}}" class="w3-round w3-image " alt="{{$teaser}}" title="{{$teaser}}" width="500" />
-          </div>
+        <div>
+          <h3 class="w3-center">{{$title}}</h3>
+          <p class="w3-center"><em>{{$teaser}}</em></p>
+          <div class="w3-row">
+            <div class="w3-col m6 w3-center w3-padding-large">
+              <img src="{{$thumbnailUrl}}" class="w3-round w3-image " alt="{{$teaser}}" title="{{$teaser}}" width="500" />
+            </div>
 
-          <!-- Hide this text on small devices -->
-          <div class="w3-col m6 w3-hide-small w3-padding-large">
-            <h4>Details...</h4>
+            <!-- Hide this text on small devices -->
+            <div class="w3-col m6 w3-hide-small w3-padding-large">
+              <table class="w3-table w3-striped w3-bordered w3-border">
+                <tbody>
+                  <tr>
+                    <td>Employer</td>
+                    <td>{{$employer.name}}</td>
+                  </tr>
+                  <tr>
+                    <td>Company/Client</td>
+                    <td>{{$company}}</td>
+                  </tr>
+                  <tr>
+                    <td>Year created</td>
+                    <td>{{$yearCreated}}</td>
+                  </tr>
+                  <tr>
+                    <td>Live URL</td>
+                    <td>{{$liveUrl}}</td>
+                  </tr>
+                  <tr>
+                    <td>Github URL</td>
+                    <td>{{$gitHubUrl}}</td>
+                  </tr>
+                  <tr>
+                    <td>Tags</td>
+                    <td>{{$tags}}</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <div class="w3-col m6 w3-padding-large">
+              <p>{{$$description}}</p>
+            </div>
           </div>
         </div>
       </template>
