--- a/src/views/portfolio.html
+++ b/src/views/portfolio.html
@@ -22,14 +22,19 @@
       <h3 class="w3-center">MY WORK</h3>
       <p class="w3-center"><em>A sample of personal and non-proprietary work projects</em></p>
 
-      <div class="w3-row-padding w3-center" id="thumbViewPortfolio"></div>
+      <div class="w3-row-padding w3-margin-top" id="thumbViewPortfolio"></div>
     </div>
 
     <% include partials/footer.ejs %>
       <template id="productThumbnail">
-        <div class="w3-col m3">
-          <a href="/portfolio/{{$slug}}"><img src="{{$thumbnailUrl}}" style="width:100%"
-            class="w3-hover-opacity" alt="{{$teaser}}" title="{{$teaser}}"/></a>
+        <div class="w3-third" style="margin-bottom:15px">
+          <div class="w3-card-2">
+            <a href="/portfolio/{{$slug}}"><img src="{{$thumbnailUrl}}" style="width:100%;height:294px" class="w3-hover-opacity w3-image" alt="{{$teaser}}" title="{{$teaser}}"/></a>
+            <div class="w3-container" style="height:75px">
+              <p>{{$title}}</p>
+              
+            </div>
+          </div>
         </div>
       </template>
 </body>
