Feature iteration and bug fixes

--- a/src/views/hire-me.html
+++ b/src/views/hire-me.html
@@ -21,6 +21,9 @@
     <div class="w3-content w3-container w3-padding-64" id="about">
       <h3 class="w3-center">AVAILABLE FOR FREELANCE AND CONSULTING</h3>
       <p class="w3-center"><em>Insatiable passion for pushing technology boundaries in the pursuit of solutions to what others say is impossible</em></p>
+      <p class="w3-center"><strong>
+        <a href="mailto:troy.forster@gmail.com" target="_blank" style="text-decoration: none"><i class="fa fa-envelope w3-hover-opacity"></i> troy.forster@gmail.com</a> <a href="tel:+14166174921" target="_blank"  style="text-decoration: none"><i class="fa fa-phone w3-hover-opacity"></i> +1-416-617-4921</a>    
+      </strong></p>
       <p>
         <ul class="taglist">
           <li>alpine</li>
@@ -58,6 +61,7 @@
           <li>hacking</li>
           <li>hardware</li>
           <li>html5</li>
+          <li>http2</li>
           <li>ia</li>
           <li>iis</li>
           <li>jade</li>
