--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
+<footer class="w3-center w3-black w3-padding-64 ">
   <a href="#top" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
     <a href="https://github.com/tforster" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
@@ -8,7 +8,9 @@
     <a href="https://www.linkedin.com/in/tforster" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>    
     <a href="https://medium.com/@tforster" target="_blank"><i class="fa fa-medium w3-hover-opacity"></i></a>    
     <a href="https://dockerhub" target="_blank"><i class="fa fa-docker w3-hover-opacity"></i></a>    
-    <a href="https://www.facebook.com/troy.forster" target="_blank"><i class="fa fa-facebook w3-hover-opacity"></i></a>
+    <a href="https://www.facebook.com/troy.forster" target="_blank"><i class="fa fa-facebook w3-hover-opacity"></i></a> 
+    <a href="https://tforster.wordpress.com" target="_blank"><i class="fa fa-wordpress w3-hover-opacity"></i></a>
+    
     <a href="mailto:troy.forster@gmail.com" target="_blank"><i class="fa fa-envelope w3-hover-opacity"></i></a>    
     <a href="tel:+14166174921" target="_blank"><i class="fa fa-phone w3-hover-opacity"></i></a>    
     <a href="http://www.imdb.com/name/nm0286997/?ref_=nv_sr_1" target="_blank"><i class="fa fa-imdb w3-hover-opacity"></i></a>    
