--- a/src/views/portfolio-product.html
+++ b/src/views/portfolio-product.html
@@ -31,11 +31,11 @@
                 <tbody>
                   <tr>
                     <td>Employer</td>
-                    <td>{{$employer.name}}</td>
+                    <td>{{$employer.fields.company}}</td>
                   </tr>
                   <tr>
                     <td>Company/Client</td>
-                    <td>{{$company}}</td>
+                    <td>{{$company.fields.name}}</td>
                   </tr>
                   <tr>
                     <td>Year created</td>
