--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -4,9 +4,9 @@
       title="Toggle Navigation Menu">
       <i class="fa fa-bars"></i>
     </a>
-    <a href="\" class="w3-bar-item w3-button">HOME</a>
-    <a href="\portfolio.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> PORTFOLIO</a>
-    <a href="\hire-me.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-hire-me"></i> HIRE ME!</a>
+    <a href="/" class="w3-bar-item w3-button">HOME</a>
+    <a href="/portfolio.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> PORTFOLIO</a>
+    <a href="/hire-me.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-hire-me"></i> HIRE ME!</a>
     <a href="https://medium.com/@tforster" class="w3-bar-item w3-button w3-hide-small" target="_blank"><i class="fa fa-medium"></i> BLOG</a>
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
       <i class="fa fa-search"></i>
@@ -16,8 +16,8 @@
   <!-- Navbar on small screens -->
   <div id="hamburgerMenu" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
 
-    <a href="\portfolio.html" class="w3-bar-item w3-button" >PORTFOLIO</a>
-    <a href="\hire-me.html" class="w3-bar-item w3-button" >HIRE ME!</a>
+    <a href="/portfolio.html" class="w3-bar-item w3-button" >PORTFOLIO</a>
+    <a href="/hire-me.html" class="w3-bar-item w3-button" >HIRE ME!</a>
     <a href="https://medium.com/@tforster" class="w3-bar-item w3-button" target="_blank"> BLOG (Medium)</a>
 
     <a href="#" class="w3-bar-item w3-button">SEARCH</a>
