--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,26 +1,35 @@
-<footer class="w3-center w3-black w3-padding-64 ">
+<footer class="w3-center w3-black w3-padding-64">
   <a href="#top" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
-    <a href="https://github.com/tforster" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
-    <a href="https://twitter.com/tforster" target="_blank"><i class="fa fa-twitter w3-hover-opacity"></i></a>
-    <a href="https://www.instagram.com/tforster" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
-    <a href="https://plus.google.com/u/0/+TroyForster" target="_blank"><i class="fa fa-gplus w3-hover-opacity"></i></a>    
-    <a href="https://www.linkedin.com/in/tforster" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>    
-    <a href="https://medium.com/@tforster" target="_blank"><i class="fa fa-medium w3-hover-opacity"></i></a>    
-    <a href="https://dockerhub" target="_blank"><i class="fa fa-docker w3-hover-opacity"></i></a>    
-    <a href="https://www.facebook.com/troy.forster" target="_blank"><i class="fa fa-facebook w3-hover-opacity"></i></a> 
-    <a href="https://tforster.wordpress.com" target="_blank"><i class="fa fa-wordpress w3-hover-opacity"></i></a>
-    
-    <a href="mailto:troy.forster@gmail.com" target="_blank"><i class="fa fa-envelope w3-hover-opacity"></i></a>    
-    <a href="tel:+14166174921" target="_blank"><i class="fa fa-phone w3-hover-opacity"></i></a>    
-    <a href="http://www.imdb.com/name/nm0286997/?ref_=nv_sr_1" target="_blank"><i class="fa fa-imdb w3-hover-opacity"></i></a>    
-  </div><div>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
-
+    <a href="https://github.com/tforster" target="_blank" title="My Github"><i class="fa fa-github w3-hover-opacity"></i></a>
+    <a href="https://twitter.com/tforster" target="_blank"  title="My Twitter"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+    <a href="https://www.instagram.com/tforster" target="_blank" title="My Instagram"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+    <a href="https://plus.google.com/u/0/+TroyForster" target="_blank" title="My Google+"><i class="fa fa-gplus w3-hover-opacity"></i></a>    
+    <a href="https://www.linkedin.com/in/tforster" target="_blank" title="My LinkedIn"><i class="fa fa-linkedin w3-hover-opacity"></i></a>    
+    <a href="https://medium.com/@tforster" target="_blank" title="My Medium Blog"><i class="fa fa-medium w3-hover-opacity"></i></a>    
+    <a href="https://dockerhub" target="_blank" title="My DockerHub"><i class="fa fa-docker w3-hover-opacity"></i></a>    
+    <a href="https://www.facebook.com/troy.forster" target="_blank" title="My Facebook"><i class="fa fa-facebook w3-hover-opacity"></i></a> 
+    <a href="https://tforster.wordpress.com" target="_blank" title="My (very) old Wordpress Blog"><i class="fa fa-wordpress w3-hover-opacity"></i></a>    
+    <a href="http://techsmarts.tumblr.com" target="_blank" title="Techsmarts Tumblr blog for tech audience"><i class="fa fa-tumblr w3-hover-opacity"></i></a>    
+    <a href="http://digitalsmarts.tumblr.com" target="_blank" title="Techsmarts Tumblr blog for business audience"><i class="fa fa-tumblr w3-hover-opacity"></i></a>    
+    <a href="mailto:troy.forster@gmail.com" target="_blank" title="Email me (will open your default email client)"><i class="fa fa-envelope w3-hover-opacity"></i></a>    
+    <a href="tel:+14166174921" target="_blank" title="Phone me (will open your default dialer or phone app)"><i class="fa fa-phone w3-hover-opacity"></i></a>    
+    <a href="http://www.imdb.com/name/nm0286997/?ref_=nv_sr_1" target="_blank" title="My IMDB profile"><i class="fa fa-imdb w3-hover-opacity"></i></a>    
+  </div>
 </footer>
+
 <!-- build:js /lib.js -->
 <script src="/js/marked.min.js"></script>
+<script src="/js/contentful.js"></script>
+<script src="/js/lrt.js"></script>
 <script src="/js/app.js"></script>
 <!-- endbuild -->
+
+<!-- Supports.js is deliberately ES5 and intended to run on pre ES6 browsers. It
+     aids in the detection and display of a warning banner on older browsers and 
+     cannot be concatenated into the ES6 script above -->
+<script src="/js/supports.js"></script>
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -29,5 +38,4 @@
 
   ga('create', 'UA-5539980-2', 'auto');
   ga('send', 'pageview');
-
 </script>
