Refactored .ejs files to support upcoming S3G builder

--- a/www/404.ejs
+++ b/www/404.ejs
@@ -6,12 +6,12 @@
   <meta name="description" content="Troy Forster" />
   <meta name="keywords" content="" />
   <meta name="view" content="/404.html" />
-  <% include partials/head.ejs %>
+  <% include _includes/head.ejs %>
 </head>
 
 <body cz-shortcut-listen="true">
   <h1> Page Not Found </h1>
-  <% include partials/header.ejs %>
+  <% include _includes/header.ejs %>
     <!-- First Parallax Image with Logo Text -->
     <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
       <div class="w3-display-middle" style="white-space:nowrap;">
@@ -19,7 +19,7 @@
       </div>
     </div>
 
-    <% include partials/footer.ejs %>
+    <% include _includes/footer.ejs %>
 
 </body>
 
