--- a/www/hire-me.ejs
+++ b/www/hire-me.ejs
@@ -6,11 +6,11 @@
   <meta name="description" content="Hire Me!" />
   <meta name="view" content="/hire-me.html" />
   <meta name="keywords" content="" />
-  <% include partials/head.ejs %>
+  <% include _includes/head.ejs %>
 </head>
 
 <body cz-shortcut-listen="true">
-  <% include partials/header.ejs %>
+  <% include _includes/header.ejs %>
 
     <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
       <div class="w3-display-middle" style="white-space:nowrap;">
@@ -154,7 +154,7 @@
         <li>WestJet</li>
       </ul>
     </div>
-    <% include partials/footer.ejs %>
+    <% include _includes/footer.ejs %>
 </body>
 
 </html>
