--- a/www/uses.ejs
+++ b/www/uses.ejs
@@ -6,11 +6,11 @@
   <meta name="description" content="Troy Forster Uses..." />
   <meta name="view" content="/uses.html" />
   <meta name="keywords" content="" />
-  <% include partials/head.ejs %>
+  <% include _includes/head.ejs %>
 </head>
 
 <body cz-shortcut-listen="true">
-  <% include partials/header.ejs %>
+  <% include _includes/header.ejs %>
 
     <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
       <div class="w3-display-middle" style="white-space:nowrap;">
@@ -34,7 +34,7 @@
         </dl>
       </p>
     </div>
-    <% include partials/footer.ejs %>
+    <% include _includes/footer.ejs %>
 </body>
 
 </html>
