--- a/www/portfolio/index.ejs
+++ b/www/portfolio/index.ejs
@@ -6,11 +6,11 @@
   <meta name="description" content="Portfolio for Troy Forster">
   <meta name="view" content="/portfolio.html" />
   <meta name="keywords" content="">
-  <% include partials/head.ejs %>
+  <% include ../_includes/head.ejs %>
 </head>
 
 <body cz-shortcut-listen="true">
-  <% include partials/header.ejs %>
+  <% include ../_includes/header.ejs %>
 
     <div class="bgimg-2 w3-display-container w3-opacity-min" id="home">
       <div class="w3-display-middle" style="white-space:nowrap;">
@@ -22,21 +22,25 @@
       <h3 class="w3-center">MY WORK</h3>
       <p class="w3-center"><em>A sample of personal and non-proprietary work projects</em></p>
 
-      <div class="w3-row-padding w3-margin-top" id="thumbViewPortfolio"></div>
+      <div class="w3-row-padding w3-margin-top" id="thumbViewPortfolio">
+        <%
+          products.map(product=>{
+            
+              product.src= src;
+              product.dest=dest;
+              product.template='/_portfolio-product.ejs';
+              product.fileName = product.slug;
+            
+            _renderFile(product);
+          %>
+
+          <%- include('_product-thumbnail.ejs',product) %>  
+        <%})%>
+      </div>
     </div>
 
-    <% include partials/footer.ejs %>
-      <template id="productThumbnail">
-        <div class="w3-third" style="margin-bottom:15px">
-          <div class="w3-card-2">
-            <a href="/portfolio/{{$slug}}"><img src="{{$thumbnailUrl}}" style="width:100%;height:294px" class="w3-hover-opacity w3-image" alt="{{$teaser}}" title="{{$teaser}}"/></a>
-            <div class="w3-container" style="height:75px">
-              <p>{{$title}}</p>
-              
-            </div>
-          </div>
-        </div>
-      </template>
+    <% include ../_includes/footer.ejs %> 
+
 </body>
 
 </html>
