Multiple refactorings moving to 4.x architecture. - New theme folder loosely follows Atomic Design name convention - db folder now contains graphql query(ies) - Gulpfile replaced with Buildfile - Migrated from Contentful RESTful API to DatoCMS GraphQL API - Migrated from EJS to Handlebars for templating engine - Improved coexistance of ESLint and Prettier - Moved ESLint rules to package.json - Output directory renamed to dist in keeping with contemporary conventions

--- a/src/theme/organisms/header.hbs
+++ b/src/theme/organisms/header.hbs
@@ -1,7 +1,9 @@
 <div class="headerTitle">
   {{title}}
 </div>
+
 <div class="w3-top">
+  <!-- Navbar on bigger screens -->
   <div class="w3-bar w3-card-2 w3-animate-top w3-white" id="myNavbar">
     <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);"
       title="Toggle Navigation Menu">
@@ -18,9 +20,8 @@
     </a>
   </div>
 
-  <!-- Navbar on small screens -->
+  <!-- Navbar on smaller screens -->
   <div id="hamburgerMenu" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
-
     <a href="/portfolio" class="w3-bar-item w3-button">PORTFOLIO</a>
     <a href="/hire-me" class="w3-bar-item w3-button">HIRE ME!</a>
     <a href="https://medium.com/@tforster" class="w3-bar-item w3-button" target="_blank"> BLOG (Medium)</a>
