--- a/src/theme/templates/portfolio_item.hbs
+++ b/src/theme/templates/portfolio_item.hbs
@@ -2,34 +2,16 @@
 <html>
 
 <head>
-  <meta {{that}}>
-  <title>{{title}}</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="author" content="Troy Forster" />
-
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-
-  <!-- build:css /stylesheet.css -->
-  <link rel="stylesheet" href="/css/w3.css" />
-  <link rel="stylesheet" href="/css/style.css" />
-  <link rel="stylesheet" href="/css/icons.css" />
-  <!-- endbuild -->
-
   {{#> head-block}}
-  {{!-- Custom <head> content per page could be added. --}}
+  {{>head.hbs}}
   {{/head-block}}
 </head>
 
 <body cz-shortcut-listen="true">
   {{#> header-block}}
-  {{!-- Custom <head> content per page could be added. --}}
   {{>header.hbs}}
   {{/header-block}}
+
 
   <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
     <div class="w3-display-middle" style="white-space:nowrap;">
@@ -37,7 +19,7 @@
     </div>
   </div>
 
-  {{#> body-block}}{{/body-block}}
+  {{#> body-block}}{{body}}{{/body-block}}
 
 
   <div>
