--- a/src/theme/organisms/footer.hbs
+++ b/src/theme/organisms/footer.hbs
@@ -22,7 +22,7 @@
 
 </footer>
 <!-- build:js /lib.js -->
-<script src="/js/app.js"></script>
+<script src="js/app.js"></script>
 <!-- endbuild -->
 <script>
   (function (i, s, o, g, r, a, m) {
