Added class modules for s3, zip and amplify

--- a/src/theme/templates/page.hbs
+++ b/src/theme/templates/page.hbs
@@ -5,9 +5,11 @@
   {{#> head-block}}
   {{>head.hbs}}
   {{/head-block}}
+
 </head>
 
 <body cz-shortcut-listen="true">
+  <tag>contents of tag</tag>
   {{#> header-block}}
   {{>header.hbs}}
   {{/header-block}}
